LPS-139790 Build Lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Valitud pilt kustutati. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Valitud pilt teisaldati prügikasti. (Automatic Translation)
 the-selected-menu-does-not-exist=Valitud menüüd pole olemas. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Valitud organisatsioon on seotud deaktiveeritud kasutajatega. Kas soovid jätkata valitud organisatsiooni kustutamist, eemaldades automaatselt deaktiveeritud kasutajate seotuse?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Valitud samm on edukalt üle läinud. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Valitud sammud on edukalt üle läinud. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Valitud kasutajagrupp on seotud deaktiveeritud kasutajatega. Kas soovid jätkata valitud kasutajagrupi kustutamist, katkestades automaatselt deaktiveeritud kasutajate seotuse?
