--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Valittu kuva on poistettu.
 the-selected-image-was-moved-to-the-recycle-bin=Valittu kuva on siirretty Roskakoriin.
 the-selected-menu-does-not-exist=Valittua valikkoa ei ole olemassa.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Valittuun organisaatioon on assosioitu deaktivoituja käyttäjiä. Haluatko jatkaa poistamalla valitut organisaatiot automaattisesti poistamalla assosiaation deaktivoituihin käyttäjiin?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Valittu vaihe on siirrytty onnistuneesti.
 the-selected-steps-have-transitioned-successfully=Valitut vaiheet on siirrytty onnistuneesti.
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Valittuun käyttäjäryhmään on assosioitu deaktivoituja käyttäjiä. Haluatko jatkaa poistamalla valitut käyttäjäryhmät automaattisesti poistamalla assosiaation deaktivoituihin käyttäjiin?
