--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=चयनित छवि को हटा दि
 the-selected-image-was-moved-to-the-recycle-bin=चयनित छवि को रीसायकल बिन में ले जाया गया था। (Automatic Translation)
 the-selected-menu-does-not-exist=चयनित मेनू मौजूद नहीं है। (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=चयनित संगठन निष्क्रिय उपयोगकर्ताओं से जुड़ा हुआ है। क्या आप निष्क्रिय उपयोगकर्ताओं को स्वचालित रूप से असंबद्ध करके चयनित संगठन को हटाने के साथ आगे बढ़ना चाहते हैं? (Automatic Translation)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=चयनित कदम सफलतापूर्वक संक्रमण हो गया है । (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=चयनित कदम सफलतापूर्वक संक्रमण है । (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=चयनित उपयोगकर्ता समूह निष्क्रिय उपयोगकर्ताओं के साथ जुड़ा हुआ है। क्या आप निष्क्रिय उपयोगकर्ताओं को स्वचालित रूप से असंबद्ध करके चयनित उपयोगकर्ता समूह को हटाने के साथ आगे बढ़ना चाहते हैं? (Automatic Translation)
