--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Pasirinktas vaizdas panaikintas. (Automatic Trans
 the-selected-image-was-moved-to-the-recycle-bin=Pasirinktas vaizdas buvo perkeltas į šiukšlinę. (Automatic Translation)
 the-selected-menu-does-not-exist=Pasirinkto meniu nėra. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Pasirinkta organizacija susieta su išjungtais vartotojais. Ar norite tęsti pasirinktos organizacijos naikinimą automatiškai atsiedami išjungtus vartotojus? (Automatic Translation)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Pasirinktas veiksmas sėkmingai pereita. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Pasirinkti veiksmai sėkmingai perkelti. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Pasirinkta vartotojų grupė susieta su išjungtais vartotojais. Ar norite tęsti pasirinktos vartotojų grupės naikinimą automatiškai atsiedami išjungtus vartotojus? (Automatic Translation)
