--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=A imagem selecionada foi excluída.
 the-selected-image-was-moved-to-the-recycle-bin=A imagem selecionada foi movida par a Lixeira.
 the-selected-menu-does-not-exist=Ocorreu um erro, este menu não existe.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=A organização selecionada está associada a usuários desativados. Você quer prosseguir com a exclusão da organização selecionada e automaticamente desassociar os usuários desativados?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=A etapa selecionada foi transferida com sucesso.
 the-selected-steps-have-transitioned-successfully=As etapas selecionadas foram transferidas com sucesso.
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=O grupo de usuário selecionado está associado a usuários desativados. Você quer prosseguir com a exclusão do grupo de usuário selecionado e automaticamente desassociar os usuários desativados?
