--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=The selected image was deleted. (Automatic Copy)
 the-selected-image-was-moved-to-the-recycle-bin=The selected image was moved to the Recycle Bin. (Automatic Copy)
 the-selected-menu-does-not-exist=The selected menu does not exist. (Automatic Copy)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Изабрана организација је повезана са деактивираним корисницима. Да ли желите да наставите са брисањем изабране организације аутоматски отповезујете деактивиране кориснике?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=The selected step has transitioned successfully. (Automatic Copy)
 the-selected-steps-have-transitioned-successfully=The selected steps have transitioned successfully. (Automatic Copy)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Изабрана група корисника је повезана са деактивираним корисницима. Да ли желите да наставите са брисањем одабране групе корисника које се аутоматски отповезати деактивиране кориснике?
