--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Den valda bilden har tagits bort.
 the-selected-image-was-moved-to-the-recycle-bin=Den valda bilden har flyttats till papperskorgen.
 the-selected-menu-does-not-exist=Den valda menyn finns inte.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Den valda organisationen är kopplad till deaktiverade användare. Vill du fortsätta ta bort den valda organisationen genom att automatiskt frånkoppla de deaktiverade användarna?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Det valda steget har förts över.
 the-selected-steps-have-transitioned-successfully=Det valda stegen har överförts.
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Den valda användargruppen är kopplad till deaktiverade användare. Vill du fortsätta ta bort den valda användargruppen genom att automatiskt frånkoppla de deaktiverade användarna.
