--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=所選的圖片已經被刪除。
 the-selected-image-was-moved-to-the-recycle-bin=所選的圖片已經被移至資源回收桶。
 the-selected-menu-does-not-exist=選定的選單不存在。
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=選擇的組織關聯到已撤銷的使用者。您想要繼續刪除選擇的組織由自動地取消關聯到已撤銷的使用者嗎？
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=選定步驟已成功轉換。
 the-selected-steps-have-transitioned-successfully=選定步驟已成功轉換。
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=選擇的使用者群組關聯到已撤銷的使用者。您想要繼續刪除選擇的使用者群組自動地取消關聯到已撤銷的使用者嗎？
