--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Избраното изображение е из
 the-selected-image-was-moved-to-the-recycle-bin=Избраното изображение е преместено в "Кошчето". (Automatic Translation)
 the-selected-menu-does-not-exist=Избраното меню не съществува. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Избраната организация е асоциирана с деактивиран потребител. Искате ли да продължите с изтриването на избраната организация като автоматично премахнете връзката с този потребител?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Избраната стъпка е преминала успешно. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Избраните стъпки са преминали успешно. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Избраната потребителска група е асоциирана с деактивирани потребители. Искате ли да продължите с изтриването на избраната потребителска група като автоматично премахнете връзката с този потребители?
