--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Vybraný obrázek byl odstraněn. (Automatic Tran
 the-selected-image-was-moved-to-the-recycle-bin=Vybraný obrázek byl přesunut do koše. (Automatic Translation)
 the-selected-menu-does-not-exist=Vybraná nabídka neexistuje. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Vybraná organizace je propojená s deaktivovanými uživateli. Přejete si ji opravdu smazat a automaticky přerušit vazby s deaktivovanými uživateli?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Vybraný krok byl úspěšně překrokován. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Vybrané kroky byly úspěšně přechodné. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Vybraná skupina je propojená s deaktivovanými uživateli. Přejete si ji opravdu smazat a automaticky přerušit vazby s deaktivovanými uživateli?
