--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Det valgte bildet ble slettet. (Automatic Transla
 the-selected-image-was-moved-to-the-recycle-bin=Det valgte bildet ble flyttet til papirkurven. (Automatic Translation)
 the-selected-menu-does-not-exist=Den valgte menyen finnes ikke. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=De valgte organisasjonene er assosiert med inaktive brukere. Vil du fortsette med å slette de valgte organisasjonen ved å automatisk avassosiere de inaktive brukerne?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Det valgte trinnet er gått over. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=De valgte trinnene er gått over. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=De valgte brukegruppene er assosiert med inaktive brukere. Vil du fortsette med å slette de valgte brukergruppene ved å automatisk avassosiere de inaktive brukerne?
