--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=The selected image was deleted. (Automatic Copy)
 the-selected-image-was-moved-to-the-recycle-bin=The selected image was moved to the Recycle Bin. (Automatic Copy)
 the-selected-menu-does-not-exist=தேர்ந்தெடுக்கப்பட்ட மெனு இல்லை.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=தேர்ந்தெடுக்கப்பட்ட நிறுவனம் முடக்கப்பட்ட பயனர்களுடன் தொடர்புடையது. தேர்ந்தெடுத்த அமைப்பை தானாகவே செயலிழக்க செய்த பயனர்களை நீக்குவதன் மூலம் தொடர விரும்புகிறீர்களா?
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=The selected step has transitioned successfully. (Automatic Copy)
 the-selected-steps-have-transitioned-successfully=The selected steps have transitioned successfully. (Automatic Copy)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=தேர்ந்தெடுக்கப்பட்ட பயனர் குழு செயலிழந்த பயனர்களுடன் தொடர்புடையது. செயலிழக்கப்பட்ட பயனர்களை தானாகவே unassociating மூலம், தேர்ந்தெடுத்த பயனர் குழுவை நீக்குவதற்கு தொடர விரும்புகிறீர்களா?
