LPS-139790 Build Lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Η επιλεγμένη εικόνα διαγρά
 the-selected-image-was-moved-to-the-recycle-bin=Η επιλεγμένη εικόνα μεταφέρθηκε στον Κάδο Ανακύκλωσης. (Automatic Translation)
 the-selected-menu-does-not-exist=Το επιλεγμένο μενού δεν υπάρχει. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Ο επιλεγμένος οργανισμός συνδέεται με απενεργοποιημένους χρήστες. Θέλετε να συνεχίσετε με τη διαγραφή του επιλεγμένου οργανισμού αποσυνδέοντας αυτόματα τους απενεργοποιημένους χρήστες
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Το επιλεγμένο βήμα έχει μεταβεί με επιτυχία. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Τα επιλεγμένα βήματα έχουν μεταβεί με επιτυχία. (Automatic Translation)
