--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=تصویر انتخاب شده حذف شد. (Auto
 the-selected-image-was-moved-to-the-recycle-bin=تصویر انتخاب شده به سطل بازیافت منتقل شد. (Automatic Translation)
 the-selected-menu-does-not-exist=منوی انتخاب شده وجود ندارد. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=سازمان انتخاب شده چند کاربر غیرفعال دارد. آیا مایلید که سازمان‌های انتخاب شده پاک شد و فرآیند ادامه یابد؟
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=گام انتخاب شده با موفقیت گذار کرده است. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=مراحل انتخاب شده با موفقیت انتقال یافته اند. (Automatic Translation)
