--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Citra terpilih telah dihapus. (Automatic Translat
 the-selected-image-was-moved-to-the-recycle-bin=Gambar yang dipilih dipindahkan ke Tampungan Daur Ulang. (Automatic Translation)
 the-selected-menu-does-not-exist=Menu yang dipilih tidak ada. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Organisasi yang dipilih berkaitan dengan pengguna dinonaktifkan. Apakah Anda ingin melanjutkan dengan menghapus organisasi yang dipilih oleh pengguna unassociating otomatis dinonaktifkan?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Langkah yang dipilih berhasil bertransisi. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Langkah-langkah yang dipilih berhasil dialirkan. (Automatic Translation)
