--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=선택한 이미지가 삭제되었습니다. (Au
 the-selected-image-was-moved-to-the-recycle-bin=선택한 이미지가 휴지통으로 이동되었습니다. (Automatic Translation)
 the-selected-menu-does-not-exist=선택한 메뉴가 없습니다. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=선정된 조직은 군대를 해산된 사용자에 회합된다. 너는 자동으로 군대를 해산하는가 사용자를unassociating서 선정하는가 조직을 삭제하는가에 진행하고는가 싶는가?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=선택한 단계가 성공적으로 전환되었습니다.
 the-selected-steps-have-transitioned-successfully=선택한 단계가 성공적으로 전환되었습니다. (Automatic Translation)
