--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=De geselecteerde afbeelding is verwijderd.
 the-selected-image-was-moved-to-the-recycle-bin=De geselecteerde afbeelding is verplaats naar de prullenbak.
 the-selected-menu-does-not-exist=Het geselecteerde menu bestaat niet.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=De geselecteerde organisatie is gekoppeld aan gedeactiveerde gebruikers. Wilt u doorgaan met het verwijderen van deze organisatie en de gedeactiveerde gebruikers automatisch ontkoppelen?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=De geselecteerde stap is overgegaan.
 the-selected-steps-have-transitioned-successfully=De overgang van de geselecteerde stappen is gebeurd.
