--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Izbrana slika je bila izbrisana. (Automatic Trans
 the-selected-image-was-moved-to-the-recycle-bin=Izbrana slika je bila premaknjena v koš. (Automatic Translation)
 the-selected-menu-does-not-exist=Izbrani meni ne obstaja. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Izbrana organizacija je povezana z nekaterimi deaktiviranimi uporabniki. Želite nadaljevati in pobrisati organizacijo? Povezave na deaktivirani uporabniki bodo samodejno odstranjene.
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Izbrani korak se je uspešno prelevil. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Izbrani koraki so se uspešno prelevili. (Automatic Translation)
