--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Das ausgewählte Bild wurde gelöscht.
 the-selected-image-was-moved-to-the-recycle-bin=Das ausgewählte Bild wurde in den Papierkorb verschoben.
 the-selected-menu-does-not-exist=Das ausgewählte Menü existiert nicht.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Die ausgewählte Organisation ist mit deaktivierten Benutzern verknüpft. Möchten Sie mit dem Löschen der Organisation fortfahren, indem die Verknüpfung zu den deaktivierten Benutzern automatisch aufgehoben wird?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Der ausgewählte Schritt wurde erfolgreich gewechselt.
 the-selected-steps-have-transitioned-successfully=Die ausgewählten Schritte wurden erfolgreich gewechselt.
