--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=La imagen seleccionada se ha eliminado.
 the-selected-image-was-moved-to-the-recycle-bin=La imagen seleccionada se ha movido a la Papelera de reciclaje.
 the-selected-menu-does-not-exist=El menú seleccionado no existe.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=La organización seleccionada tiene usuarios desactivados. ¿Desea proceder con su elminación desasociando automáticamente dichos usuarios?
+the-selected-root-folder-cannot-be-found-please-select-another-one=No se puede encontrar la Carpeta raíz seleccionada. Seleccione una nueva.
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=La Carpeta raíz seleccionada está en la Papelera de reciclaje. Elimínela o seleccione una nueva.
 the-selected-step-has-transitioned-successfully=Se ha completado correctamente la transición del paso seleccionado.
 the-selected-steps-have-transitioned-successfully=Se ha completado correctamente la transición de los pasos seleccionados.
