--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Aukeratutako irudia ezabatu da.
 the-selected-image-was-moved-to-the-recycle-bin=Aukeratutako irudia zakarrontzira mugitu da.
 the-selected-menu-does-not-exist=The selected menu does not exist. (Automatic Copy)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Aukeratutako erakundeak desgaitutako erabiltzaileak dauzka. Erakundea deuseztatu nahi duzu, erabiltzaile horiek automatikoki askatuz?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=The selected step has transitioned successfully. (Automatic Copy)
 the-selected-steps-have-transitioned-successfully=The selected steps have transitioned successfully. (Automatic Copy)
