--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=L'immagine selezionata è stata eliminata. (Autom
 the-selected-image-was-moved-to-the-recycle-bin=L'immagine selezionata è stata spostata nel Cestino. (Automatic Translation)
 the-selected-menu-does-not-exist=Il menu selezionato non esiste. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=L'organizzazione selezionata è associata ad alcuni utenti disattivati. Vuoi procedere con la cancellazione dell'organizzazione selezionata disassociando automaticamente gli utenti disattivati?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Il passaggio selezionato è stato eseguito correttamente. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=I passaggi selezionati sono stati transizione correttamente. (Automatic Translation)
