--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=התמונה שנבחרה נמחקה. (Automatic 
 the-selected-image-was-moved-to-the-recycle-bin=התמונה שנבחרה הועברה לסל המיחזור. (Automatic Translation)
 the-selected-menu-does-not-exist=התפריט שנבחר אינו קיים. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=הארגון שבחרת משויך למשתמשים שנוטרלו. האם ברצונך להמשיך למחיקת הארגון שבחרת על ידי ביטול שיוך אוטומטי של המשתמשים שנוטרלו?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=השלב שנבחר עבר בהצלחה. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=השלבים שנבחרו השתנו בהצלחה. (Automatic Translation)
