--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Imej terpilih telah dihapuskan. (Automatic Transl
 the-selected-image-was-moved-to-the-recycle-bin=Imej terpilih telah dipindahkan ke Tong Kitar Semula. (Automatic Translation)
 the-selected-menu-does-not-exist=Menu terpilih tidak wujud. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Organisasi terpilih dikaitkan dengan pengguna yang dinyahaktifkan. Adakah anda mahu meneruskan dengan menghapuskan organisasi terpilih dengan menyahtauliahkan pengguna yang dinyahaktifkan secara automatik? (Automatic Translation)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Langkah yang dipilih telah berjaya dilayan. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Langkah-langkah terpilih telah berjaya dilayan. (Automatic Translation)
