--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=Vybratý obrázok bol odstránený. (Automatic Tr
 the-selected-image-was-moved-to-the-recycle-bin=Vybratý obrázok bol presunutý do Koša. (Automatic Translation)
 the-selected-menu-does-not-exist=Vybratá ponuka neexistuje. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Vybraná organizácia je asociovaná s deaktivovanými používateľmi. Chcete vymazať vybranú organizáciu a automaticky odasociovať deaktivovaných používateľov?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Vybratý krok úspešne prešiel. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Vybraté kroky úspešne prešli. (Automatic Translation)
