--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -360,6 +360,7 @@ add-document=إضافة تعليق
 add-document-type=اسم المستند
 add-domain=إضافة مجال
 add-draft=إضافة مسودة
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=إضافة عناصر
 add-event=أضف مناسبة
 add-existing-account=إضافة حساب موجود
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP بعيد
 remove-access=إزالة الوصول
 remove-all-items=إزالة جميع العناصر
 remove-all-registered-fido2-authenticators=إزالة جميع أدوات مصادقة FIDO2 المسجلة
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=إزالة المقالات الصحفية منتهية الصلاحية.
 remove-favorite=حذف عنصر التفضيل
 remove-field=إزالة حقل
