--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -360,6 +360,7 @@ add-document=Добавяне на документ
 add-document-type=Име на документа
 add-domain=Добавяне на домейн (Automatic Translation)
 add-draft=Добавяне на чернова (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Добавяне на елементи (Automatic Translation)
 add-event=Добавяне на събитие
 add-existing-account=Добавяне на съществуващ акаунт (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Отдалечен IP адрес (Automatic Translation)
 remove-access=Премахване на достъп (Automatic Translation)
 remove-all-items=Премахване на всички елементи (Automatic Translation)
 remove-all-registered-fido2-authenticators=Премахване на всички регистрирани FIDO2 удостоверители (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Премахване на статии от изтекли списания. (Automatic Translation)
 remove-favorite=Премахване на предпочитани (Automatic Translation)
 remove-field=Премахване на поле (Automatic Translation)
