--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -360,6 +360,7 @@ add-document=Tilføj Document
 add-document-type=Tilføj dokumenttype
 add-domain=Tilføj domæne (Automatic Translation)
 add-draft=Tilføj kladde (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Tilføj elementer (Automatic Translation)
 add-event=Tilføj begivenhed
 add-existing-account=Tilføj eksisterende firma (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Fjern-IP (Automatic Translation)
 remove-access=Fjern Access (Automatic Translation)
 remove-all-items=Fjern alle elementer (Automatic Translation)
 remove-all-registered-fido2-authenticators=Fjern alle registrerede FIDO2-godkendere (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Fjern udløbne journalartikler. (Automatic Translation)
 remove-favorite=Fjern foretrukne (Automatic Translation)
 remove-field=Fjern felt (Automatic Translation)
