--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -360,6 +360,7 @@ add-document=Añadir documento
 add-document-type=Añadir Tipo de Documento
 add-domain=Añadir dominio
 add-draft=Añadir borrador
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Añadir elementos
 add-event=Añadir evento
 add-existing-account=Añadir cuenta existente
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP remota
 remove-access=Quitar acceso
 remove-all-items=Quitar todos los artículos
 remove-all-registered-fido2-authenticators=Quitar todos los autenticadores FIDO2 registrados
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Quitar los artículos de contenido web caducados.
 remove-favorite=Quitar favorito
 remove-field=Quitar campo
