--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -360,6 +360,7 @@ add-document=اضافه کردن سند
 add-document-type=افزودن نوع سند
 add-domain=افزودن دامنه (Automatic Translation)
 add-draft=اضافه کردن پیش نویس (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=افزودن عناصر
 add-event=افزودن رویداد
 add-existing-account=افزودن حساب موجود (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP راه دور
 remove-access=حذف دسترسی
 remove-all-items=حذف همه موارد (Automatic Translation)
 remove-all-registered-fido2-authenticators=حذف تمام معتبرهای FIDO2 ثبت شده (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=حذف مقالات مجله منقضی شده. (Automatic Translation)
 remove-favorite=حذف علاقمندی ها
 remove-field=حذف فیلد
