--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -360,6 +360,7 @@ add-document=Ajouter un document
 add-document-type=Ajouter le type de document
 add-domain=Ajouter un domaine
 add-draft=Ajouter un Brouillon
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Ajouter des éléments
 add-event=Ajouter un événement
 add-existing-account=Ajouter un compte existant
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP distante
 remove-access=Supprimer l'accès
 remove-all-items=Supprimer tous les éléments
 remove-all-registered-fido2-authenticators=Supprimer tous les authentificateurs FIDO2 enregistrés
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Supprimer les articles de journal expirés.
 remove-favorite=Supprimer des favoris
 remove-field=Supprimer le champ
