--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -360,6 +360,7 @@ add-document=Engadir documento
 add-document-type=Engadir tipo de documento
 add-domain=Engadir dominio
 add-draft=Engadir borrador
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Engadir elementos
 add-event=Engadir evento
 add-existing-account=Add Existing Account (Automatic Copy)
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP remoto
 remove-access=Quitar acceso
 remove-all-items=Remove All Items (Automatic Copy)
 remove-all-registered-fido2-authenticators=Remove All Registered FIDO2 Authenticators (Automatic Copy)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Remove expired journal articles. (Automatic Copy)
 remove-favorite=Remove Favorite (Automatic Copy)
 remove-field=Eliminar campo
