--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -360,6 +360,7 @@ add-document=Aggiungi Documento
 add-document-type=Aggiungi Tipo Documento
 add-domain=Aggiungi un dominio
 add-draft=Aggiungi bozza (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Aggiungi elementi (Automatic Translation)
 add-event=Aggiungi Evento
 add-existing-account=Aggiungi Account Esistente
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP remoto (Automatic Translation)
 remove-access=Rimuovere Access (Automatic Translation)
 remove-all-items=Rimuovi tutti gli elementi (Automatic Translation)
 remove-all-registered-fido2-authenticators=Rimuovere tutti gli autenticatori FIDO2 registrati (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Rimuovere gli articoli del journal scaduti. (Automatic Translation)
 remove-favorite=Rimuovi Preferito (Automatic Translation)
 remove-field=Rimuovi campo (Automatic Translation)
