--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -360,6 +360,7 @@ add-document=Pridėti dokumentą (Automatic Translation)
 add-document-type=Pridėti dokumento tipą (Automatic Translation)
 add-domain=Įtraukti domeną (Automatic Translation)
 add-draft=Pridėti juodraštį (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Elementų įtraukimas (Automatic Translation)
 add-event=Įtraukti įvykį (Automatic Translation)
 add-existing-account=Įtraukti esamą abonementą (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Nuotolinis IP (Automatic Translation)
 remove-access=Šalinti prieigą (Automatic Translation)
 remove-all-items=Šalinti visus elementus (Automatic Translation)
 remove-all-registered-fido2-authenticators=Pašalinti visus registruotus FIDO2 autentifikavimo įrenginius (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Pašalinti nebegaliojančius žurnalo straipsnius. (Automatic Translation)
 remove-favorite=Šalinti parankinį (Automatic Translation)
 remove-field=Šalinti lauką (Automatic Translation)
