--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -360,6 +360,7 @@ add-document=Legg til dokument
 add-document-type=Legg til dokumenttype
 add-domain=Legg til domene
 add-draft=Legg til kladd (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Legg til elementer
 add-event=Legg til hendelse
 add-existing-account=Legg til eksisterende konto (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Fjerntjener IP
 remove-access=Fjern tilgang
 remove-all-items=Fjern alle elementer (Automatic Translation)
 remove-all-registered-fido2-authenticators=Fjern alle registrerte FIDO2-godkjennere (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Fjern utløpte loggartikler. (Automatic Translation)
 remove-favorite=Fjern favoritt
 remove-field=Fjern felt
