--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -360,6 +360,7 @@ add-document=Dodaj dokument
 add-document-type=Dodaj typ dokumentów
 add-domain=Dodaj domenę (Automatic Translation)
 add-draft=Dodaj pochówek (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Dodawanie elementów (Automatic Translation)
 add-event=Dodaj zdarzenie
 add-existing-account=Dodawanie istniejącego konta (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Zdalny adres IP (Automatic Translation)
 remove-access=Usuń dostęp (Automatic Translation)
 remove-all-items=Usuń wszystkie elementy (Automatic Translation)
 remove-all-registered-fido2-authenticators=Usuń wszystkie zarejestrowane uwierzytelniacze uwierzytelniacze FIDO2 (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Usuń wygasłe artykuły dziennika. (Automatic Translation)
 remove-favorite=Usuń ulubione (Automatic Translation)
 remove-field=Usuń pole (Automatic Translation)
