--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -360,6 +360,7 @@ add-document=Добавить документ
 add-document-type=Добавить тип документа
 add-domain=Добавить домен (Automatic Translation)
 add-draft=Добавить проект (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Добавление элементов (Automatic Translation)
 add-event=Добавить событие
 add-existing-account=Добавление существующей учетной записи (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Удаленный IP (Automatic Translation)
 remove-access=Удалить доступ (Automatic Translation)
 remove-all-items=Удалить все элементы (Automatic Translation)
 remove-all-registered-fido2-authenticators=Удалить все зарегистрированные аутентификаторы FIDO2 (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Удалите статьи в журналах с истекшим сроком годности. (Automatic Translation)
 remove-favorite=Удалить Любимый (Automatic Translation)
 remove-field=Удалить поле (Automatic Translation)
