--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -360,6 +360,7 @@ add-document=Dodaj dokument
 add-document-type=Ima dokumenta
 add-domain=Dodaj domeno (Automatic Translation)
 add-draft=Dodaj osnutek (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Dodajanje elementov (Automatic Translation)
 add-event=Dodaj dogodek
 add-existing-account=Dodajanje obstoječega računa (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Oddaljeni IP (Automatic Translation)
 remove-access=Odstrani dostop (Automatic Translation)
 remove-all-items=Odstrani vse elemente (Automatic Translation)
 remove-all-registered-fido2-authenticators=Odstrani vse registrirane fido2 avtentifikatorje (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Odstranite članke dnevnika, ki so potekli. (Automatic Translation)
 remove-favorite=Odstrani priljubljeno (Automatic Translation)
 remove-field=Odstrani polje (Automatic Translation)
