--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -360,6 +360,7 @@ add-document=Thêm tài liệu
 add-document-type=Thêm loại tài liệu
 add-domain=Thêm Tên miền (Automatic Translation)
 add-draft=Thêm Bản nháp (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Thêm Thành phần (Automatic Translation)
 add-event=Thêm sự kiện
 add-existing-account=Thêm Trương mục Hiện có (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP từ xa (Automatic Translation)
 remove-access=Loại bỏ Truy nhập (Automatic Translation)
 remove-all-items=Loại bỏ Tất cả Khoản mục (Automatic Translation)
 remove-all-registered-fido2-authenticators=Xóa tất cả trình xác thực FIDO2 đã đăng ký (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Loại bỏ các bài báo nhật ký đã hết hạn. (Automatic Translation)
 remove-favorite=Loại bỏ Ưa chuộng (Automatic Translation)
 remove-field=Loại bỏ Trường (Automatic Translation)
