--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -360,6 +360,7 @@ add-document=新增文件
 add-document-type=增加文件類型
 add-domain=新增網域
 add-draft=新增草稿
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=新增元素
 add-event=增加事件
 add-existing-account=新增現有的帳戶
@@ -7313,6 +7314,7 @@ remoteIPInfo=遠端 IP
 remove-access=移除存取權限
 remove-all-items=移除所有項目
 remove-all-registered-fido2-authenticators=移除所有已註冊的 FIDO2 Authenticators
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=移除已過期的網站內容文章。
 remove-favorite=移除收藏
 remove-field=移除欄位
