--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -360,6 +360,7 @@ add-document=Přidat dokument
 add-document-type=Přidat typ dokumentu
 add-domain=Přidat doménu (Automatic Translation)
 add-draft=Přidat koncept (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Přidat prvky (Automatic Translation)
 add-event=Přidat událost
 add-existing-account=Přidat existující účet (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Vzdálená IP adresa (Automatic Translation)
 remove-access=Odebrat přístup (Automatic Translation)
 remove-all-items=Odebrat všechny položky (Automatic Translation)
 remove-all-registered-fido2-authenticators=Odebrat všechny registrované ověřovatele FIDO2 (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Odeberte články deníku, jejichž platnost vypršela. (Automatic Translation)
 remove-favorite=Odebrat oblíbené položky (Automatic Translation)
 remove-field=Odebrat pole (Automatic Translation)
