--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -360,6 +360,7 @@ add-document=Προσθήκη εγγράφου
 add-document-type=Προσθήκη τύπου εγγράφου
 add-domain=Προσθήκη τομέα (Automatic Translation)
 add-draft=Προσθήκη πρόχειρου (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Προσθήκη στοιχείων (Automatic Translation)
 add-event=Προσθήκη γεγονότος
 add-existing-account=Προσθήκη υπάρχοντος λογαριασμού (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Απομακρυσμένη IP (Automatic Translation)
 remove-access=Κατάργηση πρόσβασης (Automatic Translation)
 remove-all-items=Κατάργηση όλων των στοιχείων (Automatic Translation)
 remove-all-registered-fido2-authenticators=Κατάργηση όλων των καταχωρημένων επαληθευτών FIDO2 (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Καταργήστε τα άρθρα ημερολογίου που έχουν λήξει. (Automatic Translation)
 remove-favorite=Κατάργηση αγαπημένου (Automatic Translation)
 remove-field=Κατάργηση πεδίου (Automatic Translation)
