--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -360,6 +360,7 @@ add-document=Dodaj dokument
 add-document-type=Dodaj vrste dokumenta
 add-domain=Add Domain (Automatic Copy)
 add-draft=Add Draft (Automatic Copy)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Add Elements (Automatic Copy)
 add-event=Dodaj događaj
 add-existing-account=Add Existing Account (Automatic Copy)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Remote IP (Automatic Copy)
 remove-access=Remove Access (Automatic Copy)
 remove-all-items=Remove All Items (Automatic Copy)
 remove-all-registered-fido2-authenticators=Remove All Registered FIDO2 Authenticators (Automatic Copy)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Remove expired journal articles. (Automatic Copy)
 remove-favorite=Remove Favorite (Automatic Copy)
 remove-field=Remove Field (Automatic Copy)
