--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -360,6 +360,7 @@ add-document=Menambah Dokumen
 add-document-type=Tambahkan Jenis Dokumen
 add-domain=Tambah Domain (Automatic Translation)
 add-draft=Tambahkan Draf (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Tambah Elemen (Automatic Translation)
 add-event=Menambah Event
 add-existing-account=Tambahkan Akun yang Ada (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP Jarak Jauh (Automatic Translation)
 remove-access=Hapus Akses (Automatic Translation)
 remove-all-items=Hapus Semua Unsur (Automatic Translation)
 remove-all-registered-fido2-authenticators=Hapus Semua Otentikator FIDO2 terdaftar (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Hapus artikel jurnal yang kedaluwarsa. (Automatic Translation)
 remove-favorite=Hapus Favorit (Automatic Translation)
 remove-field=Hapus Bidang (Automatic Translation)
