--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -360,6 +360,7 @@ add-document=Adicionar Documento
 add-document-type=Adicionar Tipo de Documento
 add-domain=Adicionar Domínio
 add-draft=Adicionar rascunho
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Adicionar elementos (Automatic Translation)
 add-event=Adicionar Evento
 add-existing-account=Adicionar conta existente (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=IP remoto (Automatic Translation)
 remove-access=Remover acesso (Automatic Translation)
 remove-all-items=Remova todos os itens (Automatic Translation)
 remove-all-registered-fido2-authenticators=Remova todos os autenticadores FIDO2 registrados (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Remova artigos de diários expirados. (Automatic Translation)
 remove-favorite=Remover favorito (Automatic Translation)
 remove-field=Remover campo (Automatic Translation)
