--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -360,6 +360,7 @@ add-document=Belge Ekle
 add-document-type=Belge adı
 add-domain=Etki Alanı Ekle (Automatic Translation)
 add-draft=Taslak Ekle (Automatic Translation)
+add-duplicate-field=Add duplicate field {0} (Automatic Copy)
 add-elements=Öğe Ekle (Automatic Translation)
 add-event=Etkinlik Ekle
 add-existing-account=Varolan Hesap Ekle (Automatic Translation)
@@ -7313,6 +7314,7 @@ remoteIPInfo=Uzak IP (Automatic Translation)
 remove-access=Erişimi Kaldır (Automatic Translation)
 remove-all-items=Tüm Öğeleri Kaldır (Automatic Translation)
 remove-all-registered-fido2-authenticators=Tüm Kayıtlı FIDO2 Kimlik Doğrulayıcılarını Kaldır (Automatic Translation)
+remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
 remove-expired-journal-articles=Süresi dolan günlük makalelerini kaldırın. (Automatic Translation)
 remove-favorite=Sık Kullanılanları Kaldır (Automatic Translation)
 remove-field=Alanı Kaldır (Automatic Translation)
